tests/baselines/reference/defaultKeywordWithoutExport2.errors.txt
tests/cases/compiler/defaultKeywordWithoutExport2.ts(1,1): error TS1029: 'export' modifier must precede 'default' modifier.


==== tests/cases/compiler/defaultKeywordWithoutExport2.ts (1 errors) ====
    default function () {
    ~~~~~~~
!!! error TS1029: 'export' modifier must precede 'default' modifier.
    
    }